--- a/Salesforce Lightning Design System/src/pages/Trailhead_SLDS_Basic.page
+++ b/Salesforce Lightning Design System/src/pages/Trailhead_SLDS_Basic.page
@@ -1,12 +1,24 @@
 <apex:page showHeader="false" standardStylesheets="false" sidebar="false" applyHtmlTag="false" applyBodyTag="false" docType="html-5.0">
     <html xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <head>
-            <title></title>
+            <title>Salesforce Lightning Design System Trailhead Module</title>
             <apex:stylesheet value="{!URLFOR($Resource.SLDS203,'assets/styles/salesforce-lightning-design-system-vf.css')}"/>
         </head>
         
         <body>
-        
+            <div class="suddeb">
+                <p class="slds-text-heading--label slds-m-bottom--small">
+                    Salesforce Lightning Design System Trailhead Module
+                </p>
+                
+                <div class="myapp">
+                    <section aria-labelledby="badges">
+                        <h2 id="badges" class="slds-text-heading--large slds-m-vertical--large">Badges</h2>
+                        <span class="slds-badge slds-theme--success">Success Badge</span>
+                        <span class="slds-badge slds-theme--warning">Warning Badge</span>
+                    </section>
+                </div>
+            </div>
         </body>
     </html>
 </apex:page>
